обновил api добавил 2 новых эндпоинта для работы с jobs /jobs - создание задачи на обработку изображений /jobs/{jobId}/complete-upload - уведомление сервера о завершении загрузки изображений всё легко и просто подключил адаптеры minio и redis !!! на будущее, нужно переходить на фреймворк иначе будет сложно поддерживать проект с ростом функционала щас когда читаешь job_id в хендлере, хуета какая-то написана например в chi помоему это просто делается так chi.URLParam(r, "jobId") типо и всё бля а тут пришлось парсер здороый писать лучше сразу на нормальный фреймворк переходить ну еще сразу обновил сваггер доку и фронт подтянул под новые эндпоинты (через orval) всё легко и просто
